[package]
name = "nbdserve"
version = "0.1.1"
authors = ["Vitaly \"_Vi\" Shukela <vi0oss@gmail.com>"]
description = "Simple network block device server"
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/nbdserve"
keywords = ["nbd", "network-block-device"]
categories = ["network-programming"]
readme = "README.md"
edition = "2018"

[dependencies]
nbd = "0.2.2"
bufstream="0.1"
structopt = {version="0.2.10", default-features=false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winioctl", "ioapiset", "impl-default"] }
